apps/capoaberto-staging/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: no-index
  namespace: capoaberto-staging
spec:
  headers:
    customResponseHeaders:
      X-Robots-Tag: noindex, nofollow
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: capoaberto-staging
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capoaberto-staging
  namespace: capoaberto-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: capoaberto-staging-no-index@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: staging.capoaberto.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port: { number: 3000 }
    - host: capoaberto.lab.mateuseap.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port: { number: 3000 }
  tls:
    - hosts: [staging.capoaberto.com.br]
      secretName: capoaberto-staging-canonical-tls
    - hosts: [capoaberto.lab.mateuseap.com]
      secretName: capoaberto-staging-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capoaberto-staging-api
  namespace: capoaberto-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: capoaberto-staging-strip-api-prefix@kubernetescrd,capoaberto-staging-no-index@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: staging.capoaberto.com.br
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port: { number: 3001 }
    - host: capoaberto.lab.mateuseap.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port: { number: 3001 }
  tls:
    - hosts: [staging.capoaberto.com.br]
      secretName: capoaberto-staging-canonical-tls
    - hosts: [capoaberto.lab.mateuseap.com]
      secretName: capoaberto-staging-tls
